tests-system/tuples-10/output
a T
^ tuples-10/foo.rsl:10: error: tuple type Q, which contains separators, may not contain another tuple with separators
